--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -2,18 +2,20 @@
 
 .contact-container {
     background-color: var(--banner-background);
-    padding: 50px 0;
+    padding: 50px 0 60px;
 }
 
 .contact-container h2 {
     color: white;
-    margin-bottom: 40px;
+    margin-bottom: 57px;
 }
 
 .card--frame {
     position: relative;
     display: block;
     width: 75%;
+    max-width: 1100px;
+
     height: 410px;
     margin: 0 auto;
     background-color: var(--cool-white-background);
@@ -37,9 +39,9 @@
 .card-btn-topright {
     z-index: 90;
     position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 161px;
+    top: 10px;
+    right: 10px;
+    width: 169px;
     height: 137px;
     border: 14px dotted lightblue;
     background-color: var(--theme-darkgreen);
@@ -60,9 +62,9 @@
 .stamp-wrap {
     z-index: 99;
     position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 161px;
+    top: 10px;
+    right: 10px;
+    width: 170px;
     height: 137px;
     border: 7px solid lightblue;
     pointer-events: none;
@@ -76,7 +78,7 @@
 
 .form-title {
     margin-bottom: 6px;
-    font-family: dinosaur, sans-serif;
+    font-family: var(--font-body);
     font-size: 20px;
     font-weight: 400;
     color: var(--copy-mid);
@@ -86,7 +88,7 @@
     width: 315px;
     border: 1px solid var(--lightblue-alt);
     margin-bottom: 10px;
-    font-family: dinosaur, sans-serif;
+    font-family: var(--font-body);
     font-size: 16px;
     color: var(--copy-mid);
 }
@@ -130,7 +132,7 @@ textarea:focus {
 
 .response-box p {
     margin-bottom: 20px;
-    font-family: dinosaur, sans-serif;
+    font-family: var(--font-body);
     font-size: 34px;
     font-weight: 700;
 }
@@ -146,7 +148,7 @@ textarea:focus {
 
 .response-box p:nth-child(3) {
     margin-bottom: 25px;
-    font-family: dinosaur, sans-serif;
+    font-family: var(--font-body);
     font-size: 20px;
     font-weight: 400;
     line-height: 1.2;
