Adds gallery entries

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 
 
 :root {
-  --main-background: #fbf6ed;
+  --main-background: #969696;
   --primary-text: #3a3a3b;
-  --banner-background: #543864;
+  --banner-background: #277BC0;
   --inverted-heading: white;
   --skills-background: lightblue;
   --skill-box-border: #b0e9ff;
