--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -6,10 +6,29 @@
 
 }
 
+.personal-projects {
+    display: none;
+}
+
+.professional-projects {
+    display: block;
+}
+
+.active-pane {
+    display: block!important;
+}
+
+.personal-display-btn {
+    position: absolute;
+    transform: translateX(-50%);
+    top: 40px;
+}
+
+
 .gallery-container::before {
     background-image: url(/images/arabesque.png);
     background-attachment: fixed;
-    background-color: rgb(48, 48, 82);
+    background-color: #141419;
     position: absolute;
       top: 0px;
       right: 0px;
@@ -51,6 +70,11 @@
 
 }
 
+.no-image {
+    height: 310px;
+
+}
+
 .lower {
     margin-top: -8px;
     height: 325px;
@@ -82,6 +106,11 @@
     padding: 20px 30px;
     border-right: 1px solid #222;
     background-color: #333;
+    color: whitesmoke;
+}
+
+.light-text {
+    color: whitesmoke;
 }
 
 .main-img {
