--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 
 
 :root {
-  --main-background: #969696;
+  --main-background: #fbf6ed;
   --primary-text: #3a3a3b;
-  --banner-background: #277BC0;
+  --banner-background: #543864;
   --inverted-heading: white;
   --skills-background: lightblue;
   --skill-box-border: #b0e9ff;
@@ -181,7 +181,6 @@ button {
 }
 
 .about-title {
-  margin-top: 16px;
   color: var(--inverted-heading);
 }
 
@@ -294,6 +293,19 @@ button {
   border: 4px solid var(--skill-box-border);
 }
 
+#education-pane {
+  display: block;
+  height: 270px;
+  overflow: hidden;
+}
+
+#experience-pane {
+  display: block;
+  height: 270px;
+  overflow: hidden;
+  transition: height .2s ease-in-out;
+}
+
 .skill-text {
   text-align: center;
   font-size: 20px;
@@ -352,12 +364,53 @@ button {
   width: 100%;
 }
 
-.exp-wrap {
+.edu-exp-wrap {
   margin: 0 auto;
-  padding: 50px 0 40px;
+  height: 270px;
   width: 75%;
   max-width: 1100px;
+}
+
+.edu-exp-wrap {
+  cursor: grabbing;
+}
+
+
+.exp-wrap {
+  margin: 0 auto;
+  padding: 10px 0 40px;
+  width: 1820px;
+  height: 270px;
+  left: -800px;
+  position: relative;
+  user-select: none;
+  /* max-width: 1100px; */
   background-color: var(--cool-white-background);
+  animation: slider 10s linear infinite;
+  animation-direction: alternate;
+}
+
+.exp-wrap:hover { 
+  /* animation: slider 100s linear infinite; */
+  background-color: white;
+}
+
+
+@keyframes slider {
+  0% {
+    left: -10px;
+  }
+  48.5% {
+    left: -10px;
+  }
+  50% {
+    left: -860px;
+  }
+  100% {
+    left: -860px;
+  }
+
+
 }
 
 .exp-wrap h2 {
@@ -375,10 +428,17 @@ button {
   margin-right: auto;
   width: 450px;
   position: relative;
-  bottom: 6px;
+  bottom: -9px;
   padding-left: 50px;
   color: #666;
 
+}
+
+.top-pane {
+  top: 57px;
+}
+.bottom-pane {
+  bottom: 0!important;
 }
 
 .exp-text-left {
@@ -400,7 +460,11 @@ button {
 }
 
 .remote-container {
+  top: 0;
+  height: 250px;
   padding: 20px;
+  display: inline-block;
+  pointer-events: none;
 }
 
 .remote-img {
@@ -408,7 +472,12 @@ button {
 }
 
 .educator-container {
+  top: 0;
+  margin-left: 150px;
+  height: 250px;
   padding: 25px;
+  display: inline-block;
+  pointer-events: none;
 }
 
 .educator-img {
@@ -437,6 +506,80 @@ footer {
   height: 100px;
   background-color: var(--footer-background);
   padding: 20px;
+}
+
+/* Slider */
+
+.project-header-wrapper {
+  height: 60px;
+  width: 425px;
+  padding: 8px 30px;
+  background-color: #222;
+  opacity: 1;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  outline: 4px solid #333;
+  color: whitesmoke;
+}
+
+.project-header-wrapper h3 {
+  display: inline-block;
+  vertical-align: middle;
+  width: 281px;
+}
+
+.switch {
+  vertical-align: middle;
+  margin: 0 0 -5px 20px;
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 30px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 22px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 /* END of document */
