--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,8 +5,8 @@
   --primary-text: #3a3a3b;
   --banner-background: #543864;
   --inverted-heading: white;
-  --skills-background: lightblue;
-  --skill-box-border: #b0e9ff;
+  --skills-background: #a2a6c0;
+  --skill-box-border: #b7bbd9;
   --sky-blue: #add8e6;
   --footer-background: #222222;
   --cool-white-background: #ebfbff;
@@ -124,7 +124,7 @@ button {
 }
 
 .bottom {
-  box-shadow: 0 -3px 30px 0px #444;
+  box-shadow: 0 -16px 55px -16px #1f1f1f;
   border-top: solid 3px #383838;
 }
 
@@ -233,7 +233,7 @@ button {
 /*  Skills Section  */
 
 .skills-parent {
-  background-color: #222;
+  background-color: #282828;
 }
 
 .skills-container {
@@ -330,7 +330,7 @@ button {
 
 .prev-tag {
   position: absolute;
-  top: -15px;
+  top: -22px;
   left: 50%;
   width: 80%;
   transform: translateX(-50%);
@@ -338,7 +338,8 @@ button {
   opacity: 1;
   line-height: 1;
   background-color: var(--skill-box-border);
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   padding-bottom: 3px;
   font-style: italic;
 }
@@ -380,42 +381,15 @@ button {
   max-width: 1100px;
 }
 
-.edu-exp-wrap {
-  cursor: grabbing;
-}
-
-
 .exp-wrap {
   margin: 0 auto;
   padding: 10px 0 40px;
-  width: 2420px;
+  width: 100%;
   height: 270px;
   position: relative;
   user-select: none;
   /* max-width: 1100px; */
   background-color: var(--cool-white-background);
-  animation: slider 10s linear infinite;
-  animation-direction: alternate;
-}
-
-.exp-wrap:hover {
-  background-color: white;
-}
-
-
-@keyframes slider {
-  0% {
-    left: -1100px;
-  }
-  48.5% {
-    left: -1100px;
-  }
-  50% {
-    left: -60px;
-  }
-  100% {
-    left: -60px;
-  }
 }
 
 .exp-wrap h2 {
@@ -425,7 +399,6 @@ button {
 .exp-cont-inner {
   display: inline-block;
   height: 200px;
-  vertical-align: top;
 }
 
 .exp-text-right {
@@ -433,10 +406,8 @@ button {
   margin-right: auto;
   width: 450px;
   position: relative;
-  bottom: -9px;
   padding-left: 50px;
   color: #666;
-
 }
 
 .top-pane {
@@ -450,10 +421,8 @@ button {
 .exp-text-left {
   margin-left: auto;
   margin-right: auto;
-  width: 450px;
-  padding-right: 30px;
+  width: 358px;
   position: relative;
-  top: 12px;
   color: #666;
 }
 
@@ -467,12 +436,14 @@ button {
 
 .remote-container {
   top: 0;
-  position: relative;
-  right: 166px;
+  /* position: relative;
+  left: 166px; */
   height: 250px;
   padding: 20px;
   display: inline-block;
   pointer-events: none;
+  width: 74vw;
+  max-width: 1100px;
 }
 
 .remote-img {
@@ -481,17 +452,18 @@ button {
 
 .educator-container {
   top: 0;
-  margin-left: 150px;
   position: relative;
-  right: -20px;
+  left: 5px;
   height: 250px;
-  padding: 25px;
+  padding: 25px 0;
   display: inline-block;
   pointer-events: none;
+  width: 75vw;
+  max-width: 1100px;
 }
 
 .educator-img {
-  width: 200px;
+  width: 150px;
 }
 
 .detail-container {
