--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -227,7 +227,7 @@ button {
   color: white;
   line-height: 1.4;
   margin: 10px auto 20px;
-
+  letter-spacing: 2.5px;
 }
 
 /*  Skills Section  */
