--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,7 +60,7 @@ h1 {
 
 h2 {
   font-family: var(--font-header);
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 600;
   letter-spacing: 2px;
   font-size: 36px;
@@ -240,7 +240,7 @@ button {
   background-color: var(--skills-background);
   padding: 40px 0 50px;
   width: 75%;
-  max-width: 1100px;
+  max-width: 1135px;
 
   margin-left: auto;
   margin-right: auto;
@@ -378,7 +378,7 @@ button {
   margin: 0 auto;
   height: 270px;
   width: 75%;
-  max-width: 1100px;
+  max-width: 1135px;
 }
 
 .exp-wrap {
@@ -406,7 +406,7 @@ button {
   margin-right: auto;
   width: 450px;
   position: relative;
-  padding-left: 50px;
+  padding-left: 26px;
   color: #666;
 }
 
@@ -421,7 +421,7 @@ button {
 .exp-text-left {
   margin-left: auto;
   margin-right: auto;
-  width: 358px;
+  width: 396px;
   position: relative;
   color: #666;
 }
@@ -463,7 +463,7 @@ button {
 }
 
 .educator-img {
-  width: 150px;
+  width: 202px;
 }
 
 .detail-container {
