--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -41,7 +41,7 @@
 
 .gallery-frame {
     box-shadow: 0 0px 50px -15px #383838;
-    width: 800px;
+    width: 950px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -60,24 +60,18 @@
 .card--gallery {
     position: relative;
     display: block;
-    width: 800px;
-    height: 410px;
-    padding: 8px;
-    border: 0 !important;
-    margin: -8px auto 0;
+    width: 950px;
+    height: 480px;
+    border: 7px solid black;
     background-color: #222;
     text-align: left;
-
-}
-
-.no-image {
-    height: 317px;
 
 }
 
 .lower {
     margin-top: -8px;
     height: 350px;
+    width: 100%;
 }
 
 .extended {
@@ -94,8 +88,8 @@
 
 .card--gallery-inner {
     position: absolute;
-    width: calc(100% - 16px);
-    height: calc(100% - 16px);
+    width: calc(66% - 0px);
+    height: calc(100% - 0px);
     background-color: rgb(235, 235, 235);
 }
 
@@ -104,10 +98,22 @@
     padding: 14px 20px 20px 25px;
 }
 
+.card--gallery-inner ul li {
+    list-style-type: circle;
+    font-size: 17px;
+    letter-spacing: .5px;
+    font-family: var(--font-body);
+    font-weight: 500;
+    color: var(--primary-text);
+    margin: 7px 0;
+    line-height: 26px;
+}
+
+
 .gallery-img-section {
     position: relative;
     display: inline-block;
-    width: 67%;
+    width: 100%;
     height: 100%;
     padding: 5px 30px;
     border-right: 1px solid #222;
@@ -134,7 +140,7 @@
     left: 0;
     right: 0;
     display: block;
-    width: 469px;
+    height: 450px;
     margin: 0 auto;
 }
 
@@ -184,6 +190,7 @@
 .gallery-right-section {
     position: absolute;
     top: 0;
+    right: 0;
     display: inline-block;
     width: calc(33%);
     height: 100%;
