--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -1,305 +1,300 @@
 /* Gallery CSS for Portfolio Site */
 
 .gallery-container {
-    padding: 100px 0 66px;
-    position: relative;
-
+  padding: 100px 0 66px;
+  position: relative;
 }
 
 .personal-projects {
-    display: none;
+  display: none;
 }
 
 .professional-projects {
-    display: block;
+  display: block;
 }
 
 .active-pane {
-    display: block!important;
+  display: block !important;
 }
 
 .personal-display-btn {
-    position: absolute;
-    transform: translateX(-50%);
-    top: 40px;
+  position: absolute;
+  transform: translateX(-50%);
+  top: 40px;
 }
 
-
 .gallery-container::before {
-    background-image: url(/images/arabesque.png);
-    background-attachment: fixed;
-    background-color: #1c213f;
-    position: absolute;
-      top: 0px;
-      right: 0px;
-      bottom: 0px;
-      left: 0px;
-      opacity: 0.7;
-      background-size: repeat;
-      content: "";
+  background-image: url(/images/arabesque.png);
+  background-attachment: fixed;
+  background-color: #1b2149;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.7;
+  background-size: repeat;
+  content: '';
 }
 
 .gallery-frame {
-    box-shadow: 0 0px 50px -15px #383838;
-    width: 1060px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    outline: 2px solid #383838;
-    border-radius: 1px;
-    box-sizing: border-box;
+  box-shadow: 0 0px 50px -15px #10121e;
+  width: 1060px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  outline: 2px solid #383838;
+  border-radius: 1px;
+  box-sizing: border-box;
 }
 
 .gallery-container h2 {
-    font-size: 40px;
-    margin-bottom: 50px;
-    position: relative;
-    /* color: white; */
+  font-size: 40px;
+  margin-bottom: 50px;
+  position: relative;
+  /* color: white; */
 }
 
 .card--gallery {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 514px;
-    border: 7px solid black;
-    background-color: #222;
-    text-align: left;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 514px;
+  border: 7px solid black;
+  background-color: #222;
+  text-align: left;
 }
 
 .lower {
-    margin-top: -8px;
-    height: 405px;
-    width: 100%;
+  margin-top: -8px;
+  height: 405px;
+  width: 100%;
 }
 
 .extended {
-    height: 405px!important;
-    overflow: hidden!important;
+  height: 405px !important;
+  overflow: hidden !important;
 }
 
 .lower-text {
-    padding: 10px 12px;
-    background-color: #efefef!important;
-    overflow-y: auto;
+  padding: 10px 12px;
+  background-color: #efefef !important;
+  overflow-y: auto;
 }
 
 .card--gallery-inner {
-    position: absolute;
-    width: calc(70% - 0px);
-    height: calc(100% - 0px);
-    background-color: rgb(235, 235, 235);
+  position: absolute;
+  width: calc(70% - 0px);
+  height: calc(100% - 0px);
+  background-color: rgb(235, 235, 235);
 }
 
 .card--gallery-inner::-webkit-scrollbar {
-    width: 6px; /* Width of the scrollbar */
+  width: 6px; /* Width of the scrollbar */
 }
 
 /* The scrollbar track (background) */
 .card--gallery-inner::-webkit-scrollbar-track {
-    background: transparent; /* Color of the scrollbar track */
+  background: transparent; /* Color of the scrollbar track */
 }
 
 /* The scrollbar handle (thumb) */
 .card--gallery-inner::-webkit-scrollbar-thumb {
-    background: #555; /* Color of the scrollbar handle */
+  background: #555; /* Color of the scrollbar handle */
 }
 
 /* The handle on hover */
 .card--gallery-inner::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Color of the scrollbar handle on hover */
+  background: #555; /* Color of the scrollbar handle on hover */
 }
 
 .card--gallery-inner p {
-    font-size: 17px;
-    padding: 14px 20px 20px 25px;
+  font-size: 17px;
+  padding: 14px 20px 20px 25px;
 }
 
 .card--gallery-inner ul li {
-    list-style-type: circle;
-    font-size: 17px;
-    letter-spacing: .5px;
-    font-family: var(--font-body);
-    font-weight: 500;
-    color: var(--primary-text);
-    margin: 12px 0;
-    line-height: 24px;
+  list-style-type: circle;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-family: var(--font-body);
+  font-weight: 500;
+  color: var(--primary-text);
+  margin: 12px 0;
+  line-height: 24px;
 }
 
-
 .gallery-img-section {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    padding: 5px 30px;
-    border-right: 1px solid #222;
-    background-color: #333;
-    color: whitesmoke;
-    text-align: center;
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  padding: 5px 30px;
+  border-right: 1px solid #222;
+  background-color: #2f2f31;
+  color: whitesmoke;
+  text-align: center;
 }
 
 .gallery-img-section h4 {
-    font-weight: 500;
-    margin: 10px 0;
+  font-weight: 500;
+  margin: 10px 0;
 }
 
-
 .light-text {
-    color: whitesmoke;
-    padding: 7px 0!important;
+  color: whitesmoke;
+  padding: 7px 0 !important;
 }
 
 .main-img {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    right: 0;
-    display: block;
-    height: 500px;
-    margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  display: block;
+  height: 500px;
+  margin: 0 auto;
 }
 
 .gallery-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 37px;
-    height: 394px;
-    padding: 0;
-    border: 0;
-    background-repeat: no-repeat;
-    background-size: 20px 50px;
-    background-color: rgba(0, 0, 0, 0);
-    cursor: pointer;
-    opacity: .1;
-    transition: opacity .2s;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 37px;
+  height: 394px;
+  padding: 0;
+  border: 0;
+  background-repeat: no-repeat;
+  background-size: 20px 50px;
+  background-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+  opacity: 0.2;
+  transition: opacity 0.2s;
 }
 
 .gallery-btn:hover {
-    opacity: .9;
+  opacity: 0.9;
 }
 
 .gallery-btn:focus {
-    outline: none;
+  outline: none;
 }
 
 .g-btn-left {
-    left: 0px;
-    background-image: url("/images/left-arrow.png");
-    background-position: 6px 182px;
-    background-size: 40%;
+  left: 0px;
+  background-image: url('/images/left-arrow.png');
+  background-position: 10px 182px;
+  background-size: 40%;
 }
 
 .g-btn-right {
-    right: 0px;
-    background-image: url("/images/right-arrow.png");
-    background-position: 17px 182px;
-    background-size: 40%;
+  right: 0px;
+  background-image: url('/images/right-arrow.png');
+  background-position: 13px 182px;
+  background-size: 40%;
 }
 
 .gallery-btn button {
-    outline: none;
+  outline: none;
 }
 
 .gallery-right-section {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: inline-block;
-    width: calc(29%);
-    height: 100%;
-    padding: 13px;
-    background-color: #ddd;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  width: calc(29%);
+  height: 100%;
+  padding: 13px;
+  background-color: #ddd;
 }
 
 .gallery-right-section a {
-    font-size: 22px;
-    font-family: var(--font-header);
-    font-weight: 500;
-    line-height: 1.4;
-    border-bottom: 2px solid var(--theme-link);
-    color: var(--theme-link);
-    margin-bottom: 15px;
+  font-size: 22px;
+  font-family: var(--font-header);
+  font-weight: 500;
+  line-height: 1.4;
+  border-bottom: 2px solid var(--theme-link);
+  color: var(--theme-link);
+  margin-bottom: 15px;
 }
 
-
 .gallery-right-section h3 {
-    font-size: 28px;
-    font-weight: 600;
-    position: relative;
-    left: 14px;
-    padding-top: 4px;
+  font-size: 28px;
+  font-weight: 600;
+  position: relative;
+  left: 14px;
+  padding-top: 4px;
 }
 
 .gallery-right-section h4 {
-    font-size: 20px;
-    position: relative;
-    left: 25px;
-    margin-top: 10px;
+  font-size: 20px;
+  position: relative;
+  left: 25px;
+  margin-top: 10px;
 }
 
 .gallery-right-section p {
-    font-size: 16px;
-    line-height: 1.2;
-    height: 107px;
-    margin-left: -10px;
+  font-size: 16px;
+  line-height: 1.2;
+  height: 107px;
+  margin-left: -10px;
 }
 
 .gallery-right-section ul {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .sub-items {
-    font-size: 18px;
-    font-style: italic;
-    position: relative;
-    left: 6px;
-    bottom: 5px;
-    display: block;
-    margin: 16px 0 0 0;
+  font-size: 18px;
+  font-style: italic;
+  position: relative;
+  left: 6px;
+  bottom: 5px;
+  display: block;
+  margin: 16px 0 0 0;
 }
 
 .tech-item {
-    margin-left: -4px !important;
-    position: relative;
-    top: 1px;
+  margin-left: -4px !important;
+  position: relative;
+  top: 1px;
 }
 
-
 .github-btn {
-    position: absolute;
-    bottom: 19px;
-    width: calc(100% - 46px);
-    height: 38px;
-    font-size: 17px;
-    font-family: var(--font-header);
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    font-weight: 600;
-    left: 50%;
-    border: 1px solid #777;
-    border-radius: 2px;
-    color: #888;
-    transform: translateX(-50%);
-    transition: color .15s ease-out, border .15s ease-in-out, background-color .15s ease-out, letter-spacing .15s ease-out;
+  position: absolute;
+  bottom: 19px;
+  width: calc(100% - 46px);
+  height: 38px;
+  font-size: 17px;
+  font-family: var(--font-header);
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-weight: 600;
+  left: 50%;
+  border: 1px solid #777;
+  border-radius: 2px;
+  color: #888;
+  transform: translateX(-50%);
+  transition: color 0.15s ease-out, border 0.15s ease-in-out,
+    background-color 0.15s ease-out, letter-spacing 0.15s ease-out;
 }
 
 .github-btn:hover {
-    color: #444;
-    background-color: #fafafa;
-    border: 1px solid #222;
-    border-radius: 2px;
-    letter-spacing: 1.7px;
+  color: #444;
+  background-color: #fafafa;
+  border: 1px solid #222;
+  border-radius: 2px;
+  letter-spacing: 1.7px;
 }
 
 .spacer {
-    position: relative;
-    left: 50%;
-    height: 85px;
-    width: 2px;
-    opacity: 0;
+  position: relative;
+  left: 50%;
+  height: 85px;
+  width: 2px;
+  opacity: 0;
 }
 
 /* END of document */
